# txsentinel

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  TESTING.md
txsentinel/: Cargo.toml
txsentinel/src/: config.rs  main.rs  rpc.rs  slot_monitor.rs
txsentinel/src/ai/: agent.rs  decision.rs  mod.rs  tools.rs
txsentinel/src/bundle/: builder.rs  mod.rs  submitter.rs  tip_oracle.rs
txsentinel/src/failure/: classifier.rs  injector.rs  mod.rs
txsentinel/src/lifecycle/: log.rs  mod.rs  tracker.rs  types.rs
txsentinel/src/tui/: app.rs  ui.rs
